<?xml version="1.0"?>
<package format="2">
  <name>lab4pkg_py</name>
  <version>0.0.0</version>
  <description>The lab4pkg_py package</description>
  <maintainer email="cuihang1201@gmail.com">Hang Cui</maintainer>
  <license>MIT</license>
  <url type="website">https://github.com/hangcui1201/UIUC_ECE470_INTRODUCTION_TO_ROBOTICS</url>
  <author email="cuihang1201@gmail.com">Hang Cui</author>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>ur3_driver</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ur3_driver</exec_depend>
  <export>
  </export>
</package>
